# delivery-demand-forecasting

./: .gitignore  README.md  pyproject.toml
dataset/: cleaned_dataset.pkl  delivery_logistics.csv
notebooks/: 01_eda.ipynb  02_model.ipynb
notebooks/.ipynb_checkpoints/: 01_eda-checkpoint.ipynb  01_model-checkpoint.ipynb
