[project]
name = "delivery-demand-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "lab>=8.10",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "prophet>=1.3.0",
    "pyarrow>=25.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
